// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic style 1`] = `
"() => create("div", {
  className: "element_7nq"
}, "Hello World");
css(\`
	/* 1 */
	.element_7nq { color: green }
\`);"
`;

exports[`basic style 2`] = `
"() => <div className="element_7nq">Hello World</div>;
css(\`
	/* 1 */
	.element_7nq { color: green }
\`);"
`;
